--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 certifi==2018.4.16
 chardet==3.0.4
+dj-database-url==0.5.0
+Django==2.2.3
 fuzzywuzzy==0.17.0
 gunicorn==19.9.0
 idna==2.7
 mysql-connector-python==8.0.12
+psycopg2==2.8.3
 PyJWT==1.7.1
 PySocks==1.6.8
 pytz==2018.9
 requests==2.19.1
 six==1.12.0
+sqlparse==0.3.0
 twilio==6.23.1
 urllib3==1.23
 virtualenv==16.0.0
